# PRG2F_Rust

./: Cargo.toml  README.md
src/01_september/lesson_2/: variables.rs
src/01_september/lesson_3/: operace.rs  variables_cv.rs
src/01_september/lesson_4/: conditions.rs
src/02_october/lesson_5/: switch.rs
src/02_october/lesson_6/: _while.rs  while_cv.rs
src/02_october/lesson_7/: _for.rs  for_cv.rs
src/03_november/lesson_9/: string.rs  string_bonus.rs
src/04_december/lesson_10/: cviceni.rs
